tests/neg/struct5.check
12 |     sep1(t3, p)
   |     ^^^^^^^^^^^

     Separation error: {cap$45, p} and {t3} are not separated
